add comment box

--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -44,11 +44,19 @@
 			<input type="text" name="tagName" />
 			<button th:formaction="@{/remove-tag}">delete</button>
 		</form>
-		<!-- <footer id="back">
+			<div>
+			<label>Enter any comments you would like to add to this Review: </label>
+			<input type="text"/>
+				</div>
+	<!-- 	<footer id="back">
 		
 			<h3><a th:href="@{/category(id=${review.movieCategory.id})}">Back to Movie Category</a></h3>
 		</footer> -->
-	</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		
+		<script src="./js/jquery-3.2.1.js"></script>
+		
+		</div>
 
 </body>
 </html>
