--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -15,19 +15,25 @@
 			<h1>Midnite Owl's Movie Reviews</h1>
 		</header>
 		<div class="categories-item-1">
-			<h2>Thanks for visiting my movie review page!</h2>
+			<h2 >Thanks for visiting my movie review page!</h2>
 		</div>
 		<h3 class="categories-item-2">Choose A Category</h3>
 		<div class="categories-item-3" th:each="category: ${categories}">
 	<!-- category((iterateable value)give it a singular name)
 		{categories}==link to @RequestMapping in controller- -->
 		
-		<h3><a class="categories-item-4" th:href="@{/category(id=${category.id})}" th:text="${category.categoryName}"></a></h3>
+		<h2><a id="makeBig" class="categories-item-4" th:href="@{/category(id=${category.id})}" th:text="${category.categoryName}"></a></h2>
 		<!--(link)/category==the name of the page being pointed to 
 		((id=${category.id})==go to the category class and get the id of the category
 		"${category.categoryName}" == list all the categories in category class by name-->	
 	</div>
+		<footer>
+			<p id="copyWrite">&copy; 2017</p>
+		</footer>
 </div>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/js/jquery-3.2.1.js"></script>
+<script src="/js/categories-app.js"></script>
 </body>
 </html>
 <!-- 
