--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -23,9 +23,15 @@
 			.movieReviews}==Name of "mappedBy = ' ' " in your catory class-->
 			<h2><a class="category-page-item-3" th:href="@{/review(id=${review.id})}" th:text="${review.movieTitle}"></a></h2>
 		</div>
-		<footer>
+		<div>			
 			<h3 id="back"><a href="http://localhost:8080/categories">Back to Categories</a></h3>
+		</div>
+		<footer>
+			<p id="copyWrite">&copy; 2017</p>
 		</footer>
 	</div>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="/js/jquery-3.2.1.js"></script>
+	<script src="/js/categories-app.js"></script>
 </body>
 </html>
