--- a/src/main/resources/templates/review.html
+++ b/src/main/resources/templates/review.html
@@ -54,25 +54,26 @@
 				<button th:formaction="@{/remove-tag}">delete</button>
 			</form>
 		</div>
-
-		<div class="review-item-5">
-			<label>Enter any comments you would like to add to this Review: </label>
-			<input  id="inputField" type="text"/>
-			<output class="addComment" id="outputField"></output>
-			<!-- <button id="add-comment" type="submit" value="Submit">Submit</button> -->
+		<div class="user-comments" id="comments">
 		</div>
 		<div>
-		<h5></h5>
-</div>
-		<!-- 1-enter comment in input field 2=create event listener of  -->
-	<!-- 	<footer id="back">
-		
-			<h3><a th:href="@{/category(id=${review.movieCategory.id})}">Back to Movie Category</a></h3>
-		</footer> -->
+			<label>Enter any comments you would like to add to this Review: </label>
+			<input  id="commentArea" type="text" onfocus="this.value='';" placeholder="Enter A Comment" />
+			<input type="button" value="Add Comment" id="add"/>
+
+			
+		</div>
+		<div>			
+			<h3 id="back"><a href="http://localhost:8080/categories">Back to Categories</a></h3>
+		</div>
+		<footer>
+			<p id="copyWrite">&copy; 2017</p>
+		</footer>
 		
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="/js/jquery-3.2.1.js"></script>
 	<script src="/js/review-app.js"></script>
+	<script src="/js/categories-app.js"></script>
 </body>
 </html>
