--- a/src/main/resources/templates/tags.html
+++ b/src/main/resources/templates/tags.html
@@ -13,22 +13,23 @@
 <body>
 	<div class="container">
 
-	<header>
-		<h1>The Owl's Review</h1>
-	</header>
+		<header>
+			<h1>The Owl's Review</h1>
+		</header>
 
 		<div class="review-item-1">
-		<h3 class="categories-item-2">Choose A Category</h3>
-		<div class="categories-item-3" th:each="tag: ${tags}">
-		<h3><a class="categories-item-4" th:href="@{/tag(id=${tag.id})}" th:text="${tag.tagName}"></a></h3>
-		
+			<h3 class="categories-item-2">Choose A Category</h3>
+			<div class="categories-item-3" th:each="tag: ${tags}">
+				<h3><a class="categories-item-4" th:href="@{/tag(id=${tag.id})}" th:text="${tag.tagName}"></a></h3>
+				
+			</div>
 		</div>
+		<footer>
+			<p id="copyWrite">&copy; 2017</p>
+		</footer>
 	</div>
-	<!-- <footer id="back">
-		
-			<h3><a th:href="@{/review(id=${tag.reviews.id})}">Back to Review</a></h3>
-		</footer> -->
-	</div>
-
+	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="/js/jquery-3.2.1.js"></script>
+	<script src="/js/categories-app.js"></script>
 </body>
 </html>
