--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -27,14 +27,12 @@
 		((id=${category.id})==go to the category class and get the id of the category
 		"${category.categoryName}" == list all the categories in category class by name-->	
 	</div>
-		<footer>
-			<p id="copyWrite">&copy; 2017</p>
-		</footer>
+	<footer class="categories-item-5">
+		<p id="copyWrite">&copy; 2017</p>
+	</footer>
 </div>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="/js/jquery-3.2.1.js"></script>
 <script src="/js/categories-app.js"></script>
 </body>
 </html>
-<!-- 
- <a href="http://en.wikipedia.org/">Wikipedia</a><div class="box"><iframe src="http://en.wikipedia.org/" width = "500px" height = "500px"></iframe></div> remains open on mouseover. -->
