--- a/src/main/resources/templates/category.html
+++ b/src/main/resources/templates/category.html
@@ -23,10 +23,10 @@
 			.movieReviews}==Name of "mappedBy = ' ' " in your catory class-->
 			<h2><a class="category-page-item-3" th:href="@{/review(id=${review.id})}" th:text="${review.movieTitle}"></a></h2>
 		</div>
-		<div>			
-			<h3 id="back"><a href="http://localhost:8080/categories">Back to Categories</a></h3>
+		<div class="backBtn">			
+			<h2 id="back"><a href="http://localhost:8080/categories">Back to Categories</a></h2>
 		</div>
-		<footer>
+		<footer class="footer">
 			<p id="copyWrite">&copy; 2017</p>
 		</footer>
 	</div>
