--- a/src/main/resources/static/reviews-full-stack-layout.css
+++ b/src/main/resources/static/reviews-full-stack-layout.css
@@ -25,12 +25,26 @@ header{
 	grid-column: 1 / -1;
 }
 
-
-
 img {
 	border-radius: 15px;
 	max-width: 1000px;
 	width: 90%;
+}
+
+.aComment {
+	align-items: center;
+	display: flex;
+	grid-column: 1 / -1;
+	justify-content: center;
+	text-align: center;
+}
+
+.backBtn {
+	display: flex;
+	justify-content: center;
+	grid-column: 1 / -1;
+	margin-top: 1em;
+	margin-bottom: 1em;
 }
 
 .categories-item-1 {
@@ -50,15 +64,20 @@ img {
 }
 
 .categories-item-3 {
-	display: grid;
+	display: flex;
+	justify-content: space-around;
 	margin-top: 3rem;
+	grid-column: 1 / -1;
 }
 
 .categories-item-4 {
 	align-items: center;
 	flex-direction: column;
 	display: flex;
+}
 
+.categories-item-5 {
+	margin-top: 3rem;
 }
 
 .category-page-item-1 {
@@ -78,14 +97,32 @@ img {
 }
 
 .category-page-item-3 {
+	align-items: center;
 	display: inline-flex;
+	justify-content: center;
+	flex-direction: column;
 	justify-content: space-around;
+}
+
+.commentSec {
+	align-items: center;
+	display: flex;
+	grid-column: 1 / -1;
+	justify-content: center;
+	margin-top: 1em;
 }
 
 .container {
 	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 	margin: 1em auto;
+}
+
+.footer {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 3rem;
+
 }
 
 .review-item-1 {
@@ -116,24 +153,32 @@ img {
 .review-item-4 {
 	align-items: center;
 	display: flex;
+	flex-direction: column;
 	grid-column: 1 / -1;
-	justify-content: center;
-	margin-top: 3rem;
-	text-align: center;
+	
 }
 
 .review-item-5 {
 	align-items: center;
 	display: flex;
-	grid-column: 1 / -1;
+	
 	justify-content: center;
 	margin-top: 3rem;
 	text-align: center;
 }
 
-#back {
-	margin-top: 3rem;
+.tag {
+	grid-column: 1 / -1;
 	text-align: center;
+	
+}
+
+.user-comments {
+	grid-column: 1 / -1;
+}
+
+#form {
+	margin: 1em;
 }
 
 div img {
