--- a/src/main/resources/static/reviews-full-stack-style.css
+++ b/src/main/resources/static/reviews-full-stack-style.css
@@ -25,9 +25,9 @@ div h2 a:hover {
 		1px 1px 0 #000;
 }
 
-/*footer {width:6em}
-footer:hover small {display:none}
-footer:hover:before {content:"Reply!"}*/
+footer {
+	font-size: 150%;
+}
 
 h1 {
 	color: #380117;
@@ -82,6 +82,16 @@ li {
 }
 
 .review-item-3 {
+	font-size: 150%;
+	color: #380117;
+}
+
+.review-item-4 {
+	font-size: 150%;
+	color: #380117;
+}
+
+.user-comments {
 	font-size: 150%;
 	color: #380117;
 }
